syntax = "proto3";

option go_package = "github.com/superconsensus-chain/xupercore/protos";

package protos;

// GovernTokenBalance
message GovernTokenBalance {
    string total_balance = 1;
    string available_balance_for_tdpos = 2;
    string locked_balance_for_tdpos = 3;
    string available_balance_for_proposal = 4;
    string locked_balance_for_proposal = 5;
}

// TriggerDesc
message TriggerDesc {
    int64 height = 1;
    string module = 2;
    string method = 3;
    map<string, bytes> args = 4;
}

enum ProposalStatus {
    VOTING = 0;
    SUCCESS = 1;
    FAILURE = 2;
    CANCELED = 3;
}

// Proposal
message Proposal {
    string module = 1;
    string method = 2;
    map<string, bytes> args = 3;
    TriggerDesc trigger = 4;

    string vote_amount = 5;
    ProposalStatus status = 6;
    string proposer = 7;
}

message ProposalRatio{
    map<string,int64> user_ratio = 1;
}

//冻结资产记录表
message FrozenAssetsTable {
    string total = 1;
    //repeated FrozenDetails  frozendetail = 2;
    map<string , FrozenDetails> frozen_detail = 2;
    //repeated FrozenDetails  thawdetail = 3;
    map<string, FrozenDetails> thaw_detail = 3;
    int64 timestamp = 4;
}
message FrozenDetails {
    // string txid = 1;
    int64 height = 1;
    string amount = 2;
    int64 timestamp = 3;
    //是否已经解冻
    // bool isthaw = 3;
}

message NodeDetails {
    repeated NodeDetail node_detail =1;
}

message NodeDetail{
    string address = 1;
    int64 height = 2;
    string amount = 3;
    //string address = 4;
}

//节点待解冻的信息
message NodeTable{
    map<int64,NodeDetails> node_details =1;
}



